fixed whitespaces in address bar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -455,7 +455,7 @@ body {
   }
 
   .brake {
-    flex: 0.8;
+    flex: 0.3;
   }
 
   #map {
